3.10 Fix: Add .wrapper class on application.html to fix content hidding behind nav

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+
+ /*wrapper styling top margin nav fix*/
+ .wrapper {
+   margin-top: 60px;
+ }
